--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
             href="{{ url_for('index') }}"
             style="text-decoration: none; color: #ffffff"
           >
-            MyFitnessApp
+            FitFusion
           </a>
         </h1>
         <div class="profile-container">
