--- a/templates/login.html
+++ b/templates/login.html
@@ -14,17 +14,19 @@
       <div class="auth-content">
         <h2>Login</h2>
         <form method="post">
-          <label for="username">Benutzername:</label>
+          <label for="username">Username:</label>
           <input type="text" id="username" name="username" required />
 
-          <label for="password">Passwort:</label>
+          <label for="password">Password:</label>
           <input type="password" id="password" name="password" required />
 
-          <button type="submit">Login</button>
+          <button type="submit">Log In</button>
         </form>
         <p>
-          Kein Konto? <a href="{{ url_for('register') }}">Jetzt registrieren</a>
+          Don't have an account?
+          <a href="{{ url_for('register') }}">Register now</a>
         </p>
+
         {% with messages = get_flashed_messages(with_categories=true) %} {% if
         messages %}
         <ul class="messages">
