--- a/templates/register.html
+++ b/templates/register.html
@@ -12,20 +12,21 @@
   <body>
     <div class="auth-container">
       <div class="auth-content">
-        <h2>Registrierung</h2>
+        <h2>Registration</h2>
         <form method="post">
-          <label for="username">Benutzername:</label>
+          <label for="username">Username:</label>
           <input type="text" id="username" name="username" required />
 
-          <label for="password">Passwort:</label>
+          <label for="password">Password:</label>
           <input type="password" id="password" name="password" required />
 
-          <button type="submit">Registrieren</button>
+          <button type="submit">Register</button>
         </form>
         <p>
-          Bereits ein Konto?
-          <a href="{{ url_for('login') }}">Jetzt einloggen</a>
+          Already have an account?
+          <a href="{{ url_for('login') }}">Log in now</a>
         </p>
+
         {% with messages = get_flashed_messages(with_categories=true) %} {% if
         messages %}
         <ul class="messages">
