--- a/templates/goals.html
+++ b/templates/goals.html
@@ -15,6 +15,17 @@
 </div>
 <br />
 
+<!-- Toggle Button for Ernährung-->
+<div class="goals-container" style="margin-top: -4vh">
+  <button id="toggle-nutrition" class="toggle-button">
+    Nutrition <i class="bx bx-chevron-down"></i>
+  </button>
+  <div id="nutrition-content" class="goals-content">
+    <p>Hey</p>
+  </div>
+</div>
+<br />
+
 <!-- Toggle Button for Blog-->
 <div class="blog-container">
   <button id="toggle-blog" class="toggle-button btn">
