--- a/templates/goals.html
+++ b/templates/goals.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %} {% block content %}
-
-<!-- Toggle Button for Goals-->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+/><!-- Toggle Button for Goals-->
 <div class="goals-container">
   <button id="toggle-goals" class="toggle-button">
     Notes <i class="bx bx-chevron-down"></i>
@@ -21,7 +23,44 @@
     Nutrition <i class="bx bx-chevron-down"></i>
   </button>
   <div id="nutrition-content" class="goals-content">
-    <p>Hey</p>
+    <h1>Nutrition Explained</h1>
+    <p>
+      Understanding nutrition is essential for maintaining a healthy lifestyle.
+      Here are the key components:
+    </p>
+    <ul>
+      <li>
+        <i class="fas fa-apple-alt"></i>
+        <strong style="color: #2a9d8f"> Carbohydrates:</strong> Provide energy.
+        Found in bread, rice, fruits, and vegetables.
+      </li>
+      <li>
+        <i class="fas fa-drumstick-bite"></i>
+        <strong style="color: #e76f51"> Proteins:</strong> Build and repair
+        tissues. Found in meat, fish, eggs, and beans.
+      </li>
+      <li>
+        <i class="fas fa-cheese"></i>
+        <strong style="color: #f4a261"> Fats:</strong> Essential for brain
+        health and energy. Found in oils, nuts, and dairy products.
+      </li>
+      <li>
+        <i class="fas fa-carrot"></i>
+        <strong style="color: #e9c46a"> Vitamins:</strong> Support overall
+        health. Found in a variety of fruits and vegetables.
+      </li>
+      <li>
+        <i class="fas fa-burn"></i>
+        <strong style="color: #00b4d8"> Minerals:</strong> Important for bone
+        health and metabolic processes. Found in meat, dairy, fruits, and
+        vegetables.
+      </li>
+      <li>
+        <i class="fas fa-tint"></i>
+        <strong style="color: #90e0ef"> Water:</strong>
+        Vital for all bodily functions. Stay hydrated!
+      </li>
+    </ul>
   </div>
 </div>
 <br />
