--- a/templates/goals.html
+++ b/templates/goals.html
@@ -64,10 +64,10 @@
   </div>
 </div>
 <br />
-
+<!--toggle-button   -->
 <!-- Toggle Button for Blog-->
 <div class="blog-container">
-  <button id="toggle-blog" class="toggle-button btn">
+  <button id="toggle-blog" class="toggle-button">
     Bulk/Cut/Hold <i class="bx bx-chevron-down"></i>
   </button>
   <div id="blog-content" class="blog-content">
