--- a/templates/goals.html
+++ b/templates/goals.html
@@ -317,6 +317,12 @@
 </div>
 <br />
 
+<div class="chatgpt-container">
+  <button>
+    <p>Chat</p>
+  </button>
+</div>
+
 <!-- Link to external JavaScript file -->
 <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 
