--- a/templates/login.html
+++ b/templates/login.html
@@ -13,22 +13,25 @@
       rel="stylesheet"
     />
     <style>
-      .auth-container {
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        background-color: #f4f4f4;
-        margin-top: -10vh;
-        width: 80vw;
-        margin-left: 10vw;
+        background-image: url("{{ url_for('static', filename='background.png') }}");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
       }
 
-      .auth-content {
-        background: #fff;
+      .auth-container {
+        background-color: white;
         padding: 20px;
         border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
         width: 100%;
         max-width: 400px;
       }
@@ -55,6 +58,21 @@
         position: relative;
         font-size: 24px;
       }
+      header {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      header h1 a {
+        text-decoration: none;
+        color: #ffffff;
+      }
     </style>
   </head>
 
@@ -72,37 +90,35 @@
       </div>
     </header>
     <div class="auth-container">
-      <div class="auth-content">
-        <h2>Login</h2>
-        <form method="post">
-          <label for="username">Username:</label>
-          <input type="text" id="username" name="username" required />
+      <h2>Login</h2>
+      <form method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required />
 
-          <label for="password">Password:</label>
-          <div class="password-wrapper">
-            <input type="password" id="password" name="password" required />
-            <i
-              class="bx bx-hide show-password-icon"
-              onclick="togglePassword()"
-            ></i>
-          </div>
+        <label for="password">Password:</label>
+        <div class="password-wrapper">
+          <input type="password" id="password" name="password" required />
+          <i
+            class="bx bx-hide show-password-icon"
+            onclick="togglePassword()"
+          ></i>
+        </div>
 
-          <button type="submit">Log In</button>
-        </form>
-        <p>
-          Don't have an account?
-          <a href="{{ url_for('register') }}">Register now</a>
-        </p>
+        <button type="submit">Log In</button>
+      </form>
+      <p>
+        Don't have an account?
+        <a href="{{ url_for('register') }}">Register now</a>
+      </p>
 
-        {% with messages = get_flashed_messages(with_categories=true) %} {% if
-        messages %}
-        <ul class="messages">
-          {% for category, message in messages %}
-          <li class="{{ category }}">{{ message }}</li>
-          {% endfor %}
-        </ul>
-        {% endif %} {% endwith %}
-      </div>
+      {% with messages = get_flashed_messages(with_categories=true) %} {% if
+      messages %}
+      <ul class="messages">
+        {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %} {% endwith %}
     </div>
     <script>
       function togglePassword() {
