--- a/templates/register.html
+++ b/templates/register.html
@@ -13,22 +13,25 @@
       rel="stylesheet"
     />
     <style>
-      .auth-container {
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        background-color: #f4f4f4;
-        margin-top: -10vh;
-        width: 80vw;
-        margin-left: 10vw;
+        background-image: url("{{ url_for('static', filename='background.png') }}");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
       }
 
-      .auth-content {
-        background: #fff;
+      .auth-container {
+        background-color: white;
         padding: 20px;
         border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
         width: 100%;
         max-width: 400px;
       }
@@ -54,6 +57,21 @@
       .password-wrapper {
         position: relative;
         font-size: 24px;
+      }
+      header {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      header h1 a {
+        text-decoration: none;
+        color: #ffffff;
       }
     </style>
   </head>
