--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -152,7 +152,6 @@
             <thead>
               <tr>
                 <th>Username</th>
-                <th>Status</th>
                 <th>Action</th>
               </tr>
             </thead>
@@ -160,12 +159,12 @@
               {% for user in users %}
               <tr>
                 <td>{{ user.username }}</td>
-                <td>{{ user.status }}</td>
                 <td>
                   <form
-                    action="{{ url_for('delete_user_route', username=user.username) }}"
-                    method="POST"
+                    action="{{ url_for('delete_user_delete', username=user.username) }}"
+                    method="DELETE"
                   >
+                    <!-- Dein Formularinhalt -->
                     <button type="submit" class="delete-button">Delete</button>
                   </form>
                 </td>
