--- a/templates/register.html
+++ b/templates/register.html
@@ -27,16 +27,7 @@
         background-repeat: no-repeat;
         position: relative;
         overflow: hidden;
-      }
-
-      .shadow-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(209, 209, 209, 0.616); /* Dunklerer Schatten */
-        z-index: 1; /* Unter den anderen Elementen */
+        background-color: #252733;
       }
 
       .auth-container {
