--- a/templates/goals.html
+++ b/templates/goals.html
@@ -341,7 +341,7 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     " class="toggle-button diet-button" data-diet="keto">
-      Ketogenic diet <i class="bx bx-chevron-down"></i>
+      <i class="bx bx-pie-chart-alt-2"></i> Ketogenic diet <i class="bx bx-chevron-down"></i>
     </button>
 
     <button style="
@@ -355,7 +355,7 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     " class="toggle-button diet-button" data-diet="vegan">
-      Vegan diet <i class="bx bx-chevron-down"></i>
+      <i class="bx bx-leaf"></i> Vegan diet <i class="bx bx-chevron-down"></i>
     </button>
 
     <button style="
@@ -369,7 +369,7 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     " class="toggle-button diet-button" data-diet="paleo">
-      Paleo diet <i class="bx bx-chevron-down"></i>
+      <i class="bx bx-cube"></i> Paleo diet <i class="bx bx-chevron-down"></i>
     </button>
     </div>
   </div>
