--- a/templates/goals.html
+++ b/templates/goals.html
@@ -371,6 +371,32 @@
     " class="toggle-button diet-button" data-diet="paleo">
       <i class="bx bx-cube"></i> Paleo diet <i class="bx bx-chevron-down"></i>
     </button>
+    <button style="
+      border-radius: 5px;
+      background-color: #7b8f25;
+      color: white;
+      border: 1px solid #7b8f25;
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
+    " class="toggle-button diet-button" data-diet="mediterranean">
+      <i class="bx bx-cube"></i> Mediterranean Diet <i class="bx bx-chevron-down"></i>
+    </button>
+    <button style="
+      border-radius: 5px;
+      background-color: #6882f3;
+      color: white;
+      border: 1px solid #6882f3;
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
+    " class="toggle-button diet-button" data-diet="intermittent_fasting">
+      <i class="bx bx-cube"></i> Intermittent Fasting <i class="bx bx-chevron-down"></i>
+    </button>
     </div>
   </div>
 
