--- a/templates/goals.html
+++ b/templates/goals.html
@@ -329,7 +329,7 @@
     <button id="toggle-diets" class="toggle-button">
       Diets <i class="bx bx-chevron-down"></i>
     </button>
-    <div class="content-section" id="diets-content" style="display: none">
+    <div class="content-section" id="diets-content" style="display: none;">
       <button style="
       border-radius: 5px;
       background-color: #007bff;
@@ -341,7 +341,7 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     " class="toggle-button diet-button" data-diet="keto">
-      <i class="bx bx-pie-chart-alt-2"></i> Ketogenic diet <i class="bx bx-chevron-down"></i>
+      Ketogenic Diet 🥑 <i class="bx bx-chevron-down"></i>
     </button>
 
     <button style="
@@ -355,7 +355,7 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     " class="toggle-button diet-button" data-diet="vegan">
-      <i class="bx bx-leaf"></i> Vegan diet <i class="bx bx-chevron-down"></i>
+      Vegan Diet 🥦 <i class="bx bx-chevron-down"></i>
     </button>
 
     <button style="
@@ -369,7 +369,7 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     " class="toggle-button diet-button" data-diet="paleo">
-      <i class="bx bx-cube"></i> Paleo diet <i class="bx bx-chevron-down"></i>
+      Paleo Diet 🍖 <i class="bx bx-chevron-down"></i>
     </button>
     <button style="
       border-radius: 5px;
@@ -382,7 +382,7 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     " class="toggle-button diet-button" data-diet="mediterranean">
-      <i class="bx bx-cube"></i> Mediterranean Diet <i class="bx bx-chevron-down"></i>
+      Mediterranean Diet 🫒 <i class="bx bx-chevron-down"></i>
     </button>
     <button style="
       border-radius: 5px;
@@ -395,7 +395,7 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     " class="toggle-button diet-button" data-diet="intermittent_fasting">
-      <i class="bx bx-cube"></i> Intermittent Fasting <i class="bx bx-chevron-down"></i>
+      Intermittent Fasting ⏳ <i class="bx bx-chevron-down"></i>
     </button>
     </div>
   </div>
