--- a/templates/food.html
+++ b/templates/food.html
@@ -13,8 +13,8 @@
       <br>
       <div class="info-container">
         <div class="info-icon" onclick="showInfo()">i</div>
-        <div class="info-tooltip" id="infoTooltip">
-            <span style="color: rgba(255, 255, 255, 0.562);">
+        <div style="border-radius: 20px;" class="info-tooltip" id="infoTooltip">
+            <span style="color: rgba(255, 255, 255, 0.562); ">
                 Bulk: <i class="bx bx-arrow-up"></i> 250-500kcal
             </span>
             <br>
